k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
  selector:
    app: hello-world-app
