k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-app-ingress
  annotations:
    kubernetes.io/ingress.class: "octavia"
spec:
  rules:
    - host: 192.168.43.47
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-app
                port:
                  number: 80
